crates/openplanet-lsp-tui/tests/snapshots/snapshots__empty_80x24.snap
---
source: crates/openplanet-lsp-tui/tests/snapshots.rs
expression: terminal.backend()
---
"┌ openplanet-lsp check --watch ────────────────────────────────────────────────┐"
"│ watching: ./MyPlugin  ·  0 diags (0E/0W)  ·  idle                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ diagnostics ─────────────────────────────────────────────────────────────────┐"
"│  (no diagnostics)                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ keys ────────────────────────────────────────────────────────────────────────┐"
"│ q quit  ·  j/k scroll  ·  r refresh                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
