crates/openplanet-lsp-tui/tests/snapshots/snapshots__populated_40x12.snap
---
source: crates/openplanet-lsp-tui/tests/snapshots.rs
assertion_line: 52
expression: out
---
"┌ openplanet-lsp · showcase-diags ─────┐"
"│ 3 diags · 2E/1W ready · 42ms         │"
"└──────────────────────────────────────┘"
"┌ diagnostics ─────────────────────────┐"
"│›  E  src/Main.as:14:5  unknown type `│"
"│   E  src/Helpers.as:31:19  type `stri│"
"│   W  src/Helpers.as:4:24  Use 'const │"
"│                                      │"
"└──────────────────────────────────────┘"
"┌ keys ────────────────────────────────┐"
"│ q quit  ·  j/k or ↓/↑ scroll  ·  r re│"
"└──────────────────────────────────────┘"
