crates/openplanet-lsp-tui/tests/snapshots/snapshots__render_once_mock_80x24.snap
---
source: crates/openplanet-lsp-tui/tests/snapshots.rs
expression: terminal.backend()
---
"┌ openplanet-lsp check --watch ────────────────────────────────────────────────┐"
"│ watching: ./MyPlugin  ·  3 diags (2E/1W)  ·  last: 120ms                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ diagnostics ─────────────────────────────────────────────────────────────────┐"
"│›  E  src/Main.as:42:5  Undefined member 'Foo'                                │"
"│   W  src/Main.as:10:1  Use 'const string &in x' to pass a string by reference│"
"│   E  src/Helper.as:7:12  No matching signatures to 'Bar(int)'                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ keys ────────────────────────────────────────────────────────────────────────┐"
"│ q quit  ·  j/k scroll  ·  r refresh                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
